Fix issues with wheel event, body locking, and iOS jumpyness, too

--- a/source/styles.css
+++ b/source/styles.css
@@ -13,7 +13,6 @@
   box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
   color: #fff;
   height: 40px;
-  inset: 10px 10px auto auto;
   margin: 0;
   outline-offset: 2px;
   padding: 9px;
@@ -35,10 +34,12 @@
 }
 [data-rmiz-btn-zoom] {
   position: absolute;
+  inset: 10px 10px auto auto;
   cursor: zoom-in;
 }
 [data-rmiz-btn-unzoom] {
   position: absolute;
+  inset: 20px 20px auto auto;
   cursor: zoom-out;
   z-index: 1;
 }
@@ -53,14 +54,17 @@
 }
 [data-rmiz-modal][open] {
   position: fixed;
-  margin: 0;
   width: 100vw;
+  width: 100svw;
   height: 100vh;
+  height: 100svh;
   max-width: none;
   max-height: none;
+  margin: 0;
   padding: 0;
   border: 0;
   background: transparent;
+  overflow: hidden;
 }
 [data-rmiz-modal-overlay] {
   position: absolute;
